--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "budgtr-be",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "npx tsc",
+    "build": "tsc",
     "prestart": "npm run build",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "start": "node dist/server.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -25,6 +24,7 @@
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "ts-loader": "^9.4.2",
+    "tslint": "^6.1.3",
     "typescript": "^5.0.4"
   }
 }
