--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,25 +2,23 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "sourceMap": true,
-    "module": "es6",
-    "jsx": "react",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es6",
     "allowJs": true,
     "moduleResolution": "node",
-    "target": "es2017",
     "checkJs": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "noEmit": true,
     "resolveJsonModule": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*"]
     },
     "isolatedModules": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["src**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
