--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     },
     "isolatedModules": true
   },
-  "include": ["src**/*.ts", "src/**/*.tsx"],
+  "include": ["src**/*"],
   "exclude": ["node_modules"]
 }
