--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     },
     "isolatedModules": true
   },
-  "include": ["src**/*"],
+  "include": ["src/**/*", "db/**/*"],
   "exclude": ["node_modules"]
 }
